--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,9 @@
     <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
     <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
     {% if site.github.is_project_page %}
-      <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
     {% endif %}
     {% if site.show_downloads %}
     <!--{{ site.github.zip_url }} and {{ site.github.tar_url }}-->
-      <a href="/drawio/index.html" class="btn">Drawio</a>
       <a href="/baogiale/20200508.jpg" class="btn">Báo giá lẻ</a>
       <a href="/baogiasi/20200508.jpg" class="btn">Báo giá sỉ</a>
     {% endif %}
@@ -42,7 +40,7 @@
 
     <footer class="site-footer">
       {% if site.github.is_project_page %}
-        <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
+        <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> được lập trình bởi <a href="https://www.facebook.com/vuongcongminh">{{ site.github.owner_name }}</a>.</span>
       {% endif %}
       <span class="site-footer-credits">Copyright by nguyenlieugiasi.vn All rights reserved</a>.</span>
     </footer>
