--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
     {% endif %}
     {% if site.show_downloads %}
     <!--{{ site.github.zip_url }} and {{ site.github.tar_url }}-->
-      <a href="/baogiale/20200508.jpg" class="btn">Báo giá lẻ</a>
-      <a href="/baogiasi/20200508.jpg" class="btn">Báo giá sỉ</a>
+      <a href="/nguyenlieugiasi.vn/baogiale/20200508.jpg" class="btn">Báo giá lẻ</a>
+      <a href="/nguyenlieugiasi.vn/baogiasi/20200508.jpg" class="btn">Báo giá sỉ</a>
     {% endif %}
   </header>
 
