--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 
     <footer class="site-footer">
       {% if site.github.is_project_page %}
-        <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> được lập trình bởi <a href="https://www.facebook.com/vuongcongminh">{{ site.github.owner_name }}</a>.</span>
+        <span class="site-footer-owner"><a href="https://nguyenlieugiasi.vn">{{ site.github.repository_name }}</a> được lập trình bởi <a href="https://www.facebook.com/vuongcongminh">{{ site.github.owner_name }}</a>.</span>
       {% endif %}
       <span class="site-footer-credits">Copyright by nguyenlieugiasi.vn All rights reserved</a>.</span>
     </footer>
