--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,9 @@
     {% if site.show_downloads %}
     <!--{{ site.github.zip_url }} and {{ site.github.tar_url }}-->
       <a href="https://nguyenlieugiasi.vn" class="btn">Trang Chủ</a>
+      <a href="https://nguyenlieugiasi.vn/cua-hang" class="btn">Cửa Hàng</a>
+      <a href="/nguyenlieugiasi.vn/baogiale/latest.jpg" class="btn">Báo giá</a>
+      <a href="https://nguyenlieugiasi.vn/lien-he/" class="btn">Liên Hệ - Đại Lý</a>
     {% endif %}
   </header>
 
